--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   </dependencies>
   
   
-  <reporting>
+  <!--<reporting>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -55,15 +55,8 @@
         <artifactId>findbugs-maven-plugin</artifactId>
         <version>2.5.2</version>
         <configuration>
-            <!--
-Enables analysis which takes more memory but finds more bugs.
-If you run out of memory, changes the value of the effort element
-to 'low'.
--->
             <effort>Max</effort>
-            <!-- Reports all bugs (other values are medium and max) -->
             <threshold>Low</threshold>
-            <!-- Produces XML report -->
             <xmlOutput>true</xmlOutput>
         </configuration>
       </plugin>
@@ -90,7 +83,6 @@ to 'low'.
         <version>3.0.1</version>
       </plugin>
     </plugins>
-  </build>
+  </build>-->
 
-</project>
 </project>
